@@ -38,19 +38,13 @@
       <source tarname="gettext-%-mingw32-%-src.tar.%" />
 
       <component class="bin">
-        <release tarname="gettext-0.18.3.1-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libgcc-4.8.1-*-mingw32-dll-1.tar" />
-          <requires eq="mingw32-libiconv-1.14-3-mingw32-dll-2.tar" />
-        </release>
-        <release tarname="gettext-0.18.1.1-2-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
-          <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
-        </release>
-        <release tarname="gettext-0.17-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
-          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
-        </release>
+        <release tarname="gettext-0.18.3.2-1-mingw32-bin.tar.lzma" />
+        <release tarname="gettext-0.18.3.1-1-mingw32-bin.tar.lzma" />
+        <release tarname="gettext-0.18.1.1-2-mingw32-bin.tar.lzma" />
+        <release tarname="gettext-0.17-1-mingw32-bin.tar.lzma" />
         <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
+        <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
+        <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
       </component>
 
       <component class="dll">
